add info about JavaFX and Eclipse